--- a/abdullah-tarek-hassan_240102988/Frontend/02-login.html
+++ b/abdullah-tarek-hassan_240102988/Frontend/02-login.html
@@ -1,14 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Login page for Health Tracker system. Secure user authentication to access BMI history and health progress.">
-    <meta name="keywords" content="Health Tracker, Login, BMI Calculator, User Authentication">
-    <meta name="author" content="Health Tracker Team">
-    <title>Login | Health Tracker</title>
+    <!--Base Head info-->
+    <meta charset="UTF-8"> <!--It supports many languages-->
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!--Inetial Zoom 100%-->
+    <meta name="description" content="Login page for Health Tracker system. Secure user authentication to access BMI history and health progress. Track your health stats, calculate BMI instantly, and monitor fitness goals with this easy-to-use health tracker, Progress chart and visual tracker for fitness progress."> 
+    <meta name="keywords" content="Health Tracker, Login, BMI Calculator, User Authentication ,BMI calculator, health tracker, fitness tracker, body mass index, weight management, wellness app, healthy lifestyle, fitness goals, nutrition, exercise, progress, VitalTrack">
+    <meta name="author" content="VitalTrack Team">
+    <link rel="icon" href="pics/YellowHeart.png">
+    <!--Base Head info-->
 
-    <link rel="stylesheet" href="loginRegister.css">
+
+    <title>VitalTrack - Login</title>
+    <link rel="stylesheet" href="02-loginRegister.css">
 </head>
 <body>
 <div class="login_container">
@@ -28,3 +32,4 @@
 
 
 </body>
+</html>
