--- a/abdullah-tarek-hassan_240102988/Frontend/02-register.html
+++ b/abdullah-tarek-hassan_240102988/Frontend/02-register.html
@@ -1,13 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Register page for Health Tracker system. Create an account to track BMI and health progress over time.">
-    <meta name="keywords" content="Health Tracker, Register, BMI Calculator, Health Monitoring">
-    <meta name="author" content="Health Tracker Team">
-    <title>Register | Health Tracker</title>
+    <!--Base Head info-->
+    <meta charset="UTF-8"> <!--It supports many languages-->
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!--Inetial Zoom 100%-->
+    <meta name="description" content="Register page for Health Tracker system. Create an account to track BMI and health progress over time. Track your health stats, calculate BMI instantly, and monitor fitness goals with this easy-to-use health tracker, Progress chart and visual tracker for fitness progress."> 
+    <meta name="keywords" content="Health Tracker, Register, BMI Calculator, Health Monitoring, BMI calculator, health tracker, fitness tracker, body mass index, weight management, wellness app, healthy lifestyle, fitness goals, nutrition, exercise, progress, VitalTrack">
+    <meta name="author" content="VitalTrack Team">
+    <link rel="icon" href="pics/YellowHeart.png">
+    <!--Base Head info-->
 
+
+    <title>VitalTrack - Register</title>
     <link rel="stylesheet" href="loginRegister.css">
 </head>
 <body>
@@ -37,3 +41,4 @@
 
 </div>
 </body>
+</html>
