--- a/abdullah-tarek-hassan_240102988/Frontend/03-Dashboard.html
+++ b/abdullah-tarek-hassan_240102988/Frontend/03-Dashboard.html
@@ -5,34 +5,35 @@
     <meta charset="UTF-8"> <!--It supports many languages-->
     <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!--Inetial Zoom 100%-->
     <meta name="description" content="Track your health stats, calculate BMI instantly, and monitor fitness goals with this easy-to-use health tracker, Progress chart and visual tracker for fitness progress."> 
-    <meta name="keywords" content="BMI calculator, health tracker, fitness tracker, body mass index, weight management, wellness app, healthy lifestyle, fitness goals, nutrition, exercise, progress">
-    <link rel="icon" href="pics/yellow-heart_.avif">
-
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Geom:ital,wght@0,300..900;1,300..900&display=swap" rel="stylesheet">
+    <meta name="keywords" content="BMI calculator, health tracker, fitness tracker, body mass index, weight management, wellness app, healthy lifestyle, fitness goals, nutrition, exercise, progress, VitalTrack">
+    <link rel="icon" href="pics/YellowHeart.png">
     <!--Base Head info-->
 
-    <title>Yellow Heart - Dashboard</title>
-
-    <link rel="stylesheet" href="Dasboard.css">
-    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-
+    
+    <title>VitalTrack - Dashboard</title>
+    <link rel="stylesheet" href="03-Dasboard.css">
+    
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script> <!--chart.js library-->
 </head>
 <body>
-  <!-- <button style=>Dark Mode</button> change the body/content color, advanced transition -->
-  <h1 style="
-    margin-top: 60px; 
-    font-size: 25px; 
-    text-align:center
-  ">
-  Dashboard</h1>  
 
-  <p style="
-    text-align: center; 
-    margin-bottom: 60px;
-  ">
-  Track your <b style="color: blue;">body mass index</b> and monitor you <b style="color: blue;">progress</b> over time!</p>
+  <!--Navigation bar
+  1. Dashboard
+  2. Profile
+  3. Settings
+  4. Logout
+  5. FAQ
+  6. Contact Us  
+  -->
+
+  <!-- <button style=>Dark Mode</button> change the body/content color, advanced transition -->
+  <h1 style="margin-top: 60px; font-size: 25px; text-align:center"> 
+    Dashboard
+  </h1>  
+
+  <p style="text-align: center; margin-bottom: 60px;">
+    Track your <b>body mass index</b> and monitor you <b>progress</b> over time!
+  </p>
 
 
 
@@ -57,7 +58,7 @@
     <button id="show_progress" class="calculator_container_submit" style="background:#2196F3;">Show Progress</button>
   </div>
 
-  <p style="max-width:700px; margin:20px research_note; text-align:center; color:#222;">
+  <p style="text-align: center; margin-bottom: 60px;">
     <strong>Note</strong> — The results shown are based on general medical indicators and body mass index (BMI) rates as reported in medical research and references. This tool does not replace consultation with a qualified physician.
   </p>
 
