--- a/abdullah-tarek-hassan_240102988/Frontend/02-register.html
+++ b/abdullah-tarek-hassan_240102988/Frontend/02-register.html
@@ -7,12 +7,12 @@
     <meta name="description" content="Register page for Health Tracker system. Create an account to track BMI and health progress over time. Track your health stats, calculate BMI instantly, and monitor fitness goals with this easy-to-use health tracker, Progress chart and visual tracker for fitness progress."> 
     <meta name="keywords" content="Health Tracker, Register, BMI Calculator, Health Monitoring, BMI calculator, health tracker, fitness tracker, body mass index, weight management, wellness app, healthy lifestyle, fitness goals, nutrition, exercise, progress, VitalTrack">
     <meta name="author" content="VitalTrack Team">
-    <link rel="icon" href="pics/YellowHeart.png">
+    <link rel="icon" href="pics/checkmark + heart.jpg">
     <!--Base Head info-->
 
 
     <title>VitalTrack - Register</title>
-    <link rel="stylesheet" href="loginRegister.css">
+    <link rel="stylesheet" href="02-loginRegister.css">
 </head>
 <body>
     
@@ -34,7 +34,7 @@
                 <option value="female">female</option>
             </select>
             <button>register</button>
-             <p>Already have an account? <a href="login.html">Login</a> </p>
+             <p>Already have an account? <a href="02-login.html">Login</a> </p>
         </form>
   
     </div>
