--- a/abdullah-tarek-hassan_240102988/Frontend/02-login.html
+++ b/abdullah-tarek-hassan_240102988/Frontend/02-login.html
@@ -7,7 +7,7 @@
     <meta name="description" content="Login page for Health Tracker system. Secure user authentication to access BMI history and health progress. Track your health stats, calculate BMI instantly, and monitor fitness goals with this easy-to-use health tracker, Progress chart and visual tracker for fitness progress."> 
     <meta name="keywords" content="Health Tracker, Login, BMI Calculator, User Authentication ,BMI calculator, health tracker, fitness tracker, body mass index, weight management, wellness app, healthy lifestyle, fitness goals, nutrition, exercise, progress, VitalTrack">
     <meta name="author" content="VitalTrack Team">
-    <link rel="icon" href="pics/YellowHeart.png">
+    <link rel="icon" href="pics/checkmark + heart.jpg">
     <!--Base Head info-->
 
 
@@ -22,7 +22,7 @@
             <input type="email" name="email" placeholder="Email" required>
             <input type="password" name="password" placeholder="Password" required>
             <button>Login</button>
-             <p>Don't have an account? <a href="register.html">Register</a> </p>
+             <p>Don't have an account? <a href="02-register.html">Register</a> </p>
         </form>
   
     </div>
