--- a/abdullah-tarek-hassan_240102988/Frontend/02-login.html
+++ b/abdullah-tarek-hassan_240102988/Frontend/02-login.html
@@ -1,11 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <!--Base Head info-->
     <meta charset="UTF-8"> <!--It supports many languages-->
     <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!--Inetial Zoom 100%-->
-    <meta name="description" content="Login page for Health Tracker system. Secure user authentication to access BMI history and health progress. Track your health stats, calculate BMI instantly, and monitor fitness goals with this easy-to-use health tracker, Progress chart and visual tracker for fitness progress."> 
-    <meta name="keywords" content="Health Tracker, Login, BMI Calculator, User Authentication ,BMI calculator, health tracker, fitness tracker, body mass index, weight management, wellness app, healthy lifestyle, fitness goals, nutrition, exercise, progress, VitalTrack">
+    <meta name="description"
+        content="Login page for Health Tracker system. Secure user authentication to access BMI history and health progress. Track your health stats, calculate BMI instantly, and monitor fitness goals with this easy-to-use health tracker, Progress chart and visual tracker for fitness progress.">
+    <meta name="keywords"
+        content="Health Tracker, Login, BMI Calculator, User Authentication ,BMI calculator, health tracker, fitness tracker, body mass index, weight management, wellness app, healthy lifestyle, fitness goals, nutrition, exercise, progress, VitalTrack">
     <meta name="author" content="VitalTrack Team">
     <link rel="icon" href="pics/YellowHeart.png">
     <!--Base Head info-->
@@ -14,22 +17,25 @@
     <title>VitalTrack - Login</title>
     <link rel="stylesheet" href="02-loginRegister.css">
 </head>
-<body>
-<div class="login_container">
-    <div class="form-box" id="login-form">
-        <form action="">
-            <h2>Login</h2>
-            <input type="email" name="email" placeholder="Email" required>
-            <input type="password" name="password" placeholder="Password" required>
-            <button>Login</button>
-             <p>Don't have an account? <a href="register.html">Register</a> </p>
-        </form>
-  
-    </div>
 
-</div>
+<body>
+    <div class="login_container">
+        <div class="form-box" id="login-form">
+            <form action="../backend/auth/login.php" method="POST">
+                <h2>Login</h2>
+                <input type="email" name="email" placeholder="Email" required>
+                <input type="password" name="password" placeholder="Password" required>
+                <button>Login</button>
+                <p>Don't have an account? <a href="02-register.html">Register</a> </p>
+                <p style="margin-top: 10px;"><a href="01-Main.html">Back to Home</a></p>
+            </form>
+
+        </div>
+
+    </div>
 
 
 
 </body>
+
 </html>
