--- a/abdullah-tarek-hassan_240102988/Frontend/02-register.html
+++ b/abdullah-tarek-hassan_240102988/Frontend/02-register.html
@@ -1,44 +1,51 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <!--Base Head info-->
     <meta charset="UTF-8"> <!--It supports many languages-->
     <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!--Inetial Zoom 100%-->
-    <meta name="description" content="Register page for Health Tracker system. Create an account to track BMI and health progress over time. Track your health stats, calculate BMI instantly, and monitor fitness goals with this easy-to-use health tracker, Progress chart and visual tracker for fitness progress."> 
-    <meta name="keywords" content="Health Tracker, Register, BMI Calculator, Health Monitoring, BMI calculator, health tracker, fitness tracker, body mass index, weight management, wellness app, healthy lifestyle, fitness goals, nutrition, exercise, progress, VitalTrack">
+    <meta name="description"
+        content="Register page for Health Tracker system. Create an account to track BMI and health progress over time. Track your health stats, calculate BMI instantly, and monitor fitness goals with this easy-to-use health tracker, Progress chart and visual tracker for fitness progress.">
+    <meta name="keywords"
+        content="Health Tracker, Register, BMI Calculator, Health Monitoring, BMI calculator, health tracker, fitness tracker, body mass index, weight management, wellness app, healthy lifestyle, fitness goals, nutrition, exercise, progress, VitalTrack">
     <meta name="author" content="VitalTrack Team">
     <link rel="icon" href="pics/YellowHeart.png">
     <!--Base Head info-->
 
 
     <title>VitalTrack - Register</title>
-    <link rel="stylesheet" href="loginRegister.css">
+    <link rel="stylesheet" href="02-loginRegister.css">
 </head>
-<body>
-    
-<div class="register_container">
-    <div class="form-box" id="register-form">
-        <form action="C:\xampp\htdocs\Web project\health-tracker-bmi\backend\auth\register.php" method="post">
-            <h2>Register</h2>
-            <label for="Name">Name </label>
-            <input type="text" name="Name" placeholder="Enter your Name"required>
-            <label for="birth-date">Date of Birth</label>
-            <input type="date" id="birth-date" name="birth-date"placeholder="Enter your Birth Date " required max="2025-12-13">
-            <label for="email">Email </label>
-            <input type="email" name="email" placeholder="Enter your Email" required>
-            <label for="password">Password </label>
-            <input type="password" name="password" placeholder=" Enter a Password" required>
-            <select>
-                <option value="">--Select gender--</option>
-                <option value="male">male</option>
-                <option value="female">female</option>
-            </select>
-            <button>register</button>
-             <p>Already have an account? <a href="login.html">Login</a> </p>
-        </form>
-  
-    </div>
 
-</div>
+<body>
+
+    <div class="register_container">
+        <div class="form-box" id="register-form">
+            <form action="../backend/auth/register.php" method="post">
+                <h2>Register</h2>
+                <label for="Name">Name </label>
+                <input type="text" name="Name" placeholder="Enter your Name" required>
+                <label for="birth-date">Date of Birth</label>
+                <input type="date" id="birth-date" name="birth-date" placeholder="Enter your Birth Date " required
+                    max="2025-12-13">
+                <label for="email">Email </label>
+                <input type="email" name="email" placeholder="Enter your Email" required>
+                <label for="password">Password </label>
+                <input type="password" name="password" placeholder=" Enter a Password" required>
+                <select>
+                    <option value="">--Select gender--</option>
+                    <option value="male">male</option>
+                    <option value="female">female</option>
+                </select>
+                <button>register</button>
+                <p>Already have an account? <a href="02-login.html">Login</a></p>
+                <p style="margin-top: 10px;"><a href="01-Main.html">Back to Home</a></p>
+            </form>
+
+        </div>
+
+    </div>
 </body>
+
 </html>
