--- a/abdullah-tarek-hassan_240102988/Frontend/02-login.html
+++ b/abdullah-tarek-hassan_240102988/Frontend/02-login.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    
+
     <meta charset="UTF-8"> <!--It supports many languages-->
     <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!--Inetial Zoom 100%-->
     <meta name="description"
@@ -11,7 +11,7 @@
         content="Health Tracker, Login, BMI Calculator, User Authentication ,BMI calculator, health tracker, fitness tracker, body mass index, weight management, wellness app, healthy lifestyle, fitness goals, nutrition, exercise, progress, VitalTrack">
     <meta name="author" content="VitalTrack Team">
     <link rel="icon" href="pics/checkmark + heart.jpg">
-  
+
 
 
     <title>VitalTrack - Login</title>
@@ -19,17 +19,17 @@
 </head>
 
 <body>
-<div class="login_container">
-    <div class="form-box" id="login-form">
-        <form action="">
-            <h2>Login</h2>
-            <input type="email" name="email" placeholder="Email" required>
-            <input type="password" name="password" placeholder="Password" required>
-            <button>Login</button>
-             <p>Don't have an account? <a href="register.html">Register</a> </p>
-        </form>
-  
-    </div>
+    <div class="login_container">
+        <div class="form-box" id="login-form">
+            <form action="../backend/auth/login.php" method="post">
+                <h2>Login</h2>
+                <input type="email" name="email" placeholder="Email" required>
+                <input type="password" name="password" placeholder="Password" required>
+                <button>Login</button>
+                <p>Don't have an account? <a href="02-register.html">Register</a> </p>
+            </form>
+
+        </div>
 
     </div>
 
