--- a/abdullah-tarek-hassan_240102988/Frontend/02-register.html
+++ b/abdullah-tarek-hassan_240102988/Frontend/02-register.html
@@ -19,29 +19,30 @@
 </head>
 
 <body>
-    
-<div class="register_container">
-    <div class="form-box" id="register-form">
-        <form action="C:\xampp\htdocs\Web project\health-tracker-bmi\backend\auth\register.php" method="post">
-            <h2>Register</h2>
-            <label for="Name">Name </label>
-            <input type="text" name="Name" placeholder="Enter your Name"required>
-            <label for="birth-date">Date of Birth</label>
-            <input type="date" id="birth-date" name="birth-date"placeholder="Enter your Birth Date " required max="2025-12-13">
-            <label for="email">Email </label>
-            <input type="email" name="email" placeholder="Enter your Email" required>
-            <label for="password">Password </label>
-            <input type="password" name="password" placeholder=" Enter a Password" required>
-            <select>
-                <option value="">--Select gender--</option>
-                <option value="male">male</option>
-                <option value="female">female</option>
-            </select>
-            <button>register</button>
-             <p>Already have an account? <a href="login.html">Login</a> </p>
-        </form>
-  
-    </div>
+
+    <div class="register_container">
+        <div class="form-box" id="register-form">
+            <form action="../backend/auth/register.php" method="post">
+                <h2>Register</h2>
+                <label for="name">Name </label>
+                <input type="text" name="name" placeholder="Enter your Name" required>
+                <label for="birth-date">Date of Birth</label>
+                <input type="date" id="birth-date" name="birth-date" placeholder="Enter your Birth Date " required
+                    max="2025-12-13">
+                <label for="email">Email </label>
+                <input type="email" name="email" placeholder="Enter your Email" required>
+                <label for="password">Password </label>
+                <input type="password" name="password" placeholder=" Enter a Password" required>
+                <select name="gender">
+                    <option value="">--Select gender--</option>
+                    <option value="male">male</option>
+                    <option value="female">female</option>
+                </select>
+                <button>register</button>
+                <p>Already have an account? <a href="02-login.html">Login</a> </p>
+            </form>
+
+        </div>
 
     </div>
 </body>
