--- a/abdullah-tarek-hassan_240102988/Frontend/03-Dashboard.html
+++ b/abdullah-tarek-hassan_240102988/Frontend/03-Dashboard.html
@@ -2,19 +2,21 @@
 <html lang="en">
 
 <head>
-    <!--Base Head info-->
-    <meta charset="UTF-8"> <!--It supports many languages-->
-    <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!--Inetial Zoom 100%-->
-    <meta name="description" content="Track your health stats, calculate BMI instantly, and monitor fitness goals with this easy-to-use health tracker, Progress chart and visual tracker for fitness progress."> 
-    <meta name="keywords" content="BMI calculator, health tracker, fitness tracker, body mass index, weight management, wellness app, healthy lifestyle, fitness goals, nutrition, exercise, progress, VitalTrack">
-    <link rel="icon" href="pics/YellowHeart.png">
-    <!--Base Head info-->
+  <!--Base Head info-->
+  <meta charset="UTF-8"> <!--It supports many languages-->
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!--Inetial Zoom 100%-->
+  <meta name="description"
+    content="Track your health stats, calculate BMI instantly, and monitor fitness goals with this easy-to-use health tracker, Progress chart and visual tracker for fitness progress.">
+  <meta name="keywords"
+    content="BMI calculator, health tracker, fitness tracker, body mass index, weight management, wellness app, healthy lifestyle, fitness goals, nutrition, exercise, progress, VitalTrack">
+  <link rel="icon" href="pics/YellowHeart.png">
+  <!--Base Head info-->
 
-    
-    <title>VitalTrack - Dashboard</title>
-    <link rel="stylesheet" href="03-Dasboard.css">
-    
-    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script> <!--chart.js library-->
+
+  <title>VitalTrack - Dashboard</title>
+  <link rel="stylesheet" href="03-Dashboard.css">
+
+  <script src="https://cdn.jsdelivr.net/npm/chart.js"></script> <!--chart.js library-->
 </head>
 
 <body>
@@ -29,13 +31,13 @@
   -->
 
   <!-- <button style=>Dark Mode</button> change the body/content color, advanced transition -->
-  <h1 style="margin-top: 60px; font-size: 25px; text-align:center"> 
+  <h1 style="margin-top: 60px; font-size: 25px; text-align:center">
     Dashboard
-  </h1>  
+  </h1>
 
-    <p style="margin-bottom: 20px;">
-      Track your <b>body mass index</b> and monitor you <b>progress</b> over time!
-    </p>    
+  <p style="margin-bottom: 20px;">
+    Track your <b>body mass index</b> and monitor you <b>progress</b> over time!
+  </p>
   </div>
 
 
